--- a/src/components/MachineWindow/MachineWindow.scss
+++ b/src/components/MachineWindow/MachineWindow.scss
@@ -6,7 +6,7 @@
   height: 260px;
   background-color: transparent;
   min-width: 285px;
-  position: fixed;
+  position: relative;
   z-index: 1;
   &__button {
     position: relative;
