--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -10,7 +10,7 @@ html, body, #root, .App {
 
 .button {
   text-decoration: none;
-  height: 40px;
+  min-height: 40px;
   min-width: 100px;
   width: 100%;
   border: 0;
